# CHIP-8

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: tests.yml
include/chip8/: chip8.h
include/chip8/core/: constants.h  cpu.h  screen.h
include/chip8/utils/: logger.h
src/: main.cc
src/core/: cpu.cc  cpu_opcodes.cc  screen.cc
src/utils/: logger.cc
tests/: cpu_core.cc  cpu_opcodes.cc  main_test.cc
